syntax = "proto3";

package ozonmp.omp_grpc_template.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/ozonmp/omp-grpc-template/pkg/omp-grpc-template;omp_grpc_template";

// OmpGrpcTemplateService - Service for working with templates
service OmpGrpcTemplateService {
  // DescribeTemplateV1 - Describe a template
  rpc DescribeTemplateV1 (DescribeTemplateV1Request) returns (DescribeTemplateV1Response) {
    option (google.api.http) = {
      post: "/v1/templates"
      body: "*"
    };
  }
}

message Template {
  uint64 id  = 1;
  uint64 foo = 2;
}

message DescribeTemplateV1Request {
  uint64 id = 1 [(validate.rules).uint64.gt = 0];
}

message DescribeTemplateV1Response {
  Template value = 1;
}
